내 강의 조회 시 전체조회되는 문제